welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:6: error: illegal start of simple pattern
    case (_,)
            ^alarmClock:7: error: '=>' expected but '}' found.
  }
  ^